# mushroom_classification

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml  model.yaml  preprocessing.yaml  training.yaml
mushroom_classifier/: __init__.py  data.py  infer.py  model.py  train.py  utils.py
scripts/: convert_to_tensorrt.py  export_model.py  prepare_data.py  run_server.py  setup_triton_server.py  start_mlflow_server.py
